--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <div class="container">
+  <link rel="stylesheet" href="whendoestheshipopen.css">
+  <script src="whendoestheshipopen.js"></script>
   <h1 id="headline">Countdown to when the Ship opens:</h1>
   <div id="countdown">
     <ul>
